--- a/index.html
+++ b/index.html
@@ -12,36 +12,80 @@
 <body>
 
  <!-- header -->
-    <header class="bg-[#0D0D0D] h-20 flex justify-center items-center">
-        <div class="w-full max-w-7xl flex justify-between items-center gap-16 px-10 relative" >
-            <a href="./index.html" class="flex w-[306px] h-20 justify-start items-center border-[#252525] lg:border-[0px_2px_0px_0px]">
-         
-                <img class="inline-block " src="/Logo.svg" width="132px" height="26px" alt="" aria-hidden="true">
-            </a>
-            <input type="checkbox" id="toggler" class="hidden peer">
-            <div class="absolute top-0 left-0 py-10 gap-[50px] w-full flex flex-col justify-between items-center bg-[#0d0d0d] transform-[translateY(-100%)] transition-all duration-500  z-1 lg:z-[1] lg:flex lg:static lg:py-0 lg:flex-row lg:transform-[translateY(-0%)] lg:gap-0 lg:z-[1] lg:duration-[0s] peer-checked:transform-[translateY(0%)] peer-checked:mt-[80px]">
-            <nav class="text-white text-[16px] uppercase tracking-[0px] flex gap-[50px] flex-col text-center lg:flex-row">
-                <a href="./index.html" target="_blank" class="transition-colors duration-300 hover:text-[#FFD2A4] hover:border-b-2 border-[#FFD2A4]">home</a>
-                <a href="./pages/about-Us.html" target="_blank" class="transition-colors duration-300 hover:text-[#FFD2A4] hover:border-b-2 border-[#FFD2A4]">about us</a>
-                <a href="./pages/sermon.html" target="_blank" class="transition-colors duration-300 hover:text-[#FFD2A4] hover:border-b-2 border-[#FFD2A4]">sermon</a>
-                <a href="./pages/blog.html" target="_blank" class="transition-colors duration-300 hover:text-[#FFD2A4] hover:border-b-2 border-[#FFD2A4]">blog</a>
-            </nav>
-            <a href="./pages/contact.html" target="_blank" class="uppercase bg-[#FFD2A4] text-[16px] text-[#1C1D28] rounded-xl h-14 w-[180px] flex justify-center items-center transition-opacity duration-300 hover:opacity-[0.8]">
-                Contact Us
-            </a>
-            </div>
-            <label for="toggler" class="flex items-center justify-center p-[6px_8px] bg-[#FFD2A4] text-[#1c1d28] text-[22px] lg:hidden rounded-sm absolute right-10">
-                <span class="fa fa-bars"></span>
-            </label>
-                <div class="block bg-[#0d0d0d] opacity-[0.5] h-full w-full"></div>
-            </label>
+
+  <header class="bg-[#0D0D0D] pt-4 pb-4 2xl:pr-0 pr-5 sm:pt-3 sm:pb-3" >
+      <div
+        class="flex items-center justify-between relative pl-5 pr-5 2xl:max-w-[1320px] 2xl:ml-auto 2xl:mr-auto"
+      >
+        <!-- Logo -->
+
+        <a href="index.html">
+          <img src="./Logo.svg" alt="logo" />
+        </a>
+
+        <span class="hidden lg:block w-0.5 bg-white h-20 absolute left-[196px] opacity-40"></span>
+
+        <nav
+          class="text-white absolute left-[260px] justify-end text-[16px] hidden lg:flex gap-[30px]"
+        >
+          <a href="./index.html">Home</a>
+          <a href="./pages/about-Us.html">About us</a>
+          <a href="./pages/sermon.html">Sermon</a>
+          <a href="./pages/blog.html">Blog</a>
+        </nav>
+
+        <a
+          href="./pages/contact.html"
+          class="hidden sm:flex items-center justify-center text-[18px] text-blck border-[#FFD2A4] w-[180px] h-14 bg-[#FFD2A4] border rounded-xl"
+        >
+          Contact us
+        </a>
+
+        <!-- burger-menu -->
+        <label
+          for="bars"
+          class="absolute right-0 top-0 peer-checked:[&~.burger-menu]:translate-x-0 sm:relative lg:hidden"
+        >
+          <img src="./img/menu.png" alt="bars" width="50px" height="50px" class="pb-[10px]"/>
+        </label>
+        <input class="peer" type="checkbox" id="bars" hidden />
+        <label for="bars" class="peer-checked:block fixed inset-0 hidden"></label>
+        <div
+          class="burger-menu fixed top-0 left-0 w-[300px] peer-checked:shadow-2xl peer-checked:shadow-black peer-checked:translate-x-0 -translate-x-full h-screen bg-white flex flex-col gap-[30px] p-5 rounded-r-xl"
+        >
+          <nav class="flex flex-col gap-2.5">
+            <a
+              href="./index.html"
+              class="text-[20px] text-black font-bold active:border-b-red-500"
+              >Home</a
+            >
+            <a
+              href="./pages/about-Us.html"
+              class="text-[20px] text-black font-bold active:border-b-red-500"
+              >About us</a
+            >
+            <a
+              href="./pages/sermon.html"
+              class="text-[20px] text-black font-bold active:border-b-red-500"
+              >Sermon</a
+            >
+            <a
+              href="./pages/blog.html"
+              class="text-[20px] text-black font-bold active:border-b-red-500"
+              >Blog</a
+            >
+          </nav>
+
+          <a
+            href="./pages/contact.html"
+            class="text-[18px] text-black border-[#FFD2A4] pt-5 pb-5 pl-12 pr-12 bg-[#FFD2A4] border-2 rounded-xl"
+          >
+            Contact us
+          </a>
         </div>
-     </header>
-         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
-         <!-- MAin  -->
+      </div>
+    </header>
+     <!-- MAin  -->
     <main>
         <!-- Hero  -->
    <section>
