--- a/pages/blog-post.html
+++ b/pages/blog-post.html
@@ -27,23 +27,23 @@
         <a
           href="#"
           class="flex items-center ml-[50px] border-[#3d3c3c] border-[0px_2px_0px_0px] h-[100%] pr-[15px]"
-          ><img src="..//img/Finsweet.logo.svg" alt="logo"
+          ><img src="../Logo.svg" alt="logo"
         /></a>
         <nav class="hidden md:flex gap-6 text-gray-400 mr-[400px]">
           <a href="..//index.html" target="_blank" class="hover:text-orange-500"
             >Home</a
           >
-          <a href="aboutus.html" target="_blank" class="hover:text-orange-500"
+          <a href="./about-Us.html" target="_blank" class="hover:text-orange-500"
             >About us</a
           >
-          <a href="sermon.html" target="_blank" class="hover:text-orange-500"
+          <a href="./sermon.html" target="_blank" class="hover:text-orange-500"
             >Sermon</a
           >
-          <a href="blog.html" target="_blank" class="hover:text-orange-500"
+          <a href="./blog.html" target="_blank" class="hover:text-orange-500"
             >Blog</a
           >
         </nav>
-        <a href="contact.html">
+        <a href="./contact.html">
           <button
             class="relative px-[10px] mr-[50px] py-[4px] bg-[#FFD2A4] font-semibold border-[2px] overflow-hidden group rounded-[6px] cursor-pointer border-none"
           >
@@ -56,7 +56,11 @@
             >
           </button>
         </a>
+        <div>
+          
+        </div>
       </div>
+      
     </header>
     <main class="grow">
       <section class="mt-[128px]">
