--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,17 +33,17 @@
           <a href="..//index.html" target="_blank" class="hover:text-orange-500"
             >Home</a
           >
-          <a href="aboutus.html" target="_blank" class="hover:text-orange-500"
+          <a href="./aboutus.html" target="_blank" class="hover:text-orange-500"
             >About us</a
           >
-          <a href="sermon.html" target="_blank" class="hover:text-orange-500"
+          <a href="./sermon.html" target="_blank" class="hover:text-orange-500"
             >Sermon</a
           >
-          <a href="blog.html" target="_blank" class="hover:text-orange-500"
+          <a href="./blog.html" target="_blank" class="hover:text-orange-500"
             >Blog</a
           >
         </nav>
-        <a href="contact.html">
+        <a href="./contact.html">
           <button
             class="relative px-[10px] mr-[50px] py-[4px] bg-[#FFD2A4] font-semibold border-[2px] overflow-hidden group rounded-[6px] cursor-pointer border-none"
           >
